frontend/test/should_pass/conn_model_001.gm
node class A;

edge class e
    connect A[*] --> B[*];

node class B;
