frontend/test/should_fail/range_001.gm
node class A;

node class B;

edge class E
     connect A[*] -> B[4:1];
